--- a/style.css
+++ b/style.css
@@ -114,6 +114,11 @@ header{
 
 @media screen and (min-width:641px) and (max-width:1023px){
   
+    header{
+        background-color: black ;
+    }
+
+
 
     #sobre-a-loja .container {
         display: block;
@@ -132,7 +137,7 @@ header{
         margin: 0 auto;
         
     }
-
+   
     .lista-produtos img{
         width: 320px;
         height: 320px;
@@ -140,7 +145,7 @@ header{
     }
     .lista-produtos{
        display: grid;
-       grid-template-columns: repeat(2,45%);
+       grid-template-columns: repeat(2,55%);
        column-gap: 1%;
        row-gap: 5%;
     }
@@ -148,6 +153,11 @@ header{
    .lista-produtos p{
     max-width: 75%;
     height: 25%;
+   }
+
+   .lista-produtos h3{
+    max-width: 100%;
+    height: 10%;
    }
         
 }
