--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@ header{
    color: #fff;
 }
 
+.menu li a{
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+}
+
 .store-front{
     max-width: 570px;
     padding: 16px 10px;
