--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ header{
 @media screen and (min-width:641px) and (max-width:1023px){
   
     header{
-        background-color: black ;
+        background-color: CornflowerBlue ;
     }
 
 
